# kdi-alignment

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: bikesharing_lavis.json  bikesharing_mezzocorona.json  bikesharing_mezzolombardo.json  bikesharing_rovereto.json  bikesharing_sanmichelealladige.json  bikesharing_trento.json  car_sharing.kml  centro_in_bici.kml  parcheggio_protetto_biciclette.kml  taxi.kml
src/: kdigtfs.rs  main.rs
src/kdi/: align.rs  enums.rs  json.rs  kml.rs  mod.rs  structs.rs
